@@ -51,4 +51,50 @@ test_that("Unifrac beta diversity", {
                          weighted = FALSE, normalized = 1,
                          BPPARAM = SerialParam())
     )
+    
+    data("GlobalPatterns")
+    tse <- GlobalPatterns
+    # Compare to phyloseq function
+    .require_package("phyloseq")
+    # Convert data into phyloseq
+    pseq <- makePhyloseqFromTreeSE(tse)
+    # Calculate unifrac
+    unifrac_tse <- as.matrix(calculateUnifrac(tse))
+    unifrac_pseq <- as.matrix(phyloseq::UniFrac(pseq))
+    expect_equal(unifrac_tse, unifrac_pseq)
+    # Calculate unifrac
+    unifrac_tse <- as.matrix(calculateUnifrac(tse, weighted = TRUE, normalized = FALSE))
+    unifrac_pseq <- as.matrix(phyloseq::UniFrac(pseq, weighted = TRUE, normalized = FALSE))
+    expect_equal(unifrac_tse, unifrac_pseq)
+    
+    # Test with merged object with multiple trees
+    tse <- mergeSEs(GlobalPatterns, esophagus, missing_values = 0)
+    
+    # Convert data into phyloseq
+    pseq <- makePhyloseqFromTreeSE(tse)
+    # Convert back to TreeSE (pseq has pruned tree)
+    tse <- makeTreeSEFromPhyloseq(pseq)
+    # Calculate unifrac
+    unifrac_tse <- as.matrix(calculateUnifrac(tse))
+    unifrac_pseq <- as.matrix(phyloseq::UniFrac(pseq))
+    expect_equal(unifrac_tse, unifrac_pseq)
+    # Calculate unifrac
+    unifrac_tse <- as.matrix(calculateUnifrac(tse, weighted = TRUE, normalized = FALSE, 
+                                              tree_name = "phylo"))
+    unifrac_pseq <- as.matrix(phyloseq::UniFrac(pseq, weighted = TRUE, normalized = FALSE))
+    expect_equal(unifrac_tse, unifrac_pseq)
+    
+    # Test the function with agglomerated data
+    tse <- agglomerateByRank(tse, rank = "Phylum")
+    # Convert data into phyloseq
+    suppressWarnings( pseq <- makePhyloseqFromTreeSE(tse) )
+    # Convert back to TreeSE (pseq has pruned tree)
+    tse <- makeTreeSEFromPhyloseq(pseq)
+    # Calculate unifrac
+    unifrac_tse <- as.matrix(calculateUnifrac(tse, normalized = TRUE))
+    unifrac_pseq <- as.matrix(phyloseq::UniFrac(pseq, normalized = TRUE))
+    expect_equal(unifrac_tse, unifrac_pseq)
+    
+    # Detach phyloseq package
+    unloadNamespace("phyloseq")
 })
